@startuml edosolver
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam arrowColor #000000
skinparam classBorderColor #000000

'==============================
' JERARQUÍA DE HERENCIA
'==============================

'==============================
' ABSTRACT CLASS DifferentialEquation
'==============================
abstract class DifferentialEquation {
  + {abstract} order(): int
  + {abstract} solveLatex(): String
  + toString(): String
}

'==============================
' CLASS LinearEquation
'==============================
class LinearEquation extends DifferentialEquation {
  # order: int
  
  + LinearEquation(order: int)
  + order(): int
  + solveLatex(): String
  + toString(): String
}

'==============================
' INTERFACE Solvable
'==============================
interface Solvable {
  + toLatex(): String
  + getRoots(): Pair<Complex, Complex>
}

'==============================
' CLASS FirstOrderLinearEquation
'==============================
class FirstOrderLinearEquation extends LinearEquation {
  - b: int
  - c: int
  
  + FirstOrderLinearEquation(b: int, c: int)
  + solveLatex(): String
  + getRoots(): Pair<Complex, Complex>
  + toLatex(): String
  + getB(): int
  + getC(): int
  + toString(): String
}

'==============================
' CLASS SecondOrderLinearEquation
'==============================
class SecondOrderLinearEquation extends LinearEquation {
  - a: int
  - b: int
  - c: int
  - ec: ecCuadraticas
  
  + SecondOrderLinearEquation(a: int, b: int, c: int)
  + solveLatex(): String
  + getRoots(): Pair<Complex, Complex>
  + getUnderlyingEc(): ecCuadraticas
  + toLatex(): String
  + toString(): String
  - normalizeCoef(String): String
  - buildRealExp(String): String
}

'==============================
' EXCEPTION InvalidEquationException
'==============================
class InvalidEquationException extends Exception {
  + InvalidEquationException(message: String)
  + InvalidEquationException(message: String, cause: Throwable)
}

'==============================
' CLASES AUXILIARES
'==============================

'==============================
' CLASS ecCuadraticas
'==============================
class ecCuadraticas {
  - a: int
  - b: int
  - c: int

  + ecCuadraticas()
  + ecCuadraticas(a: int, b: int, c: int)
  + ecCuadraticas(b: int, c: int)

  + getA(): int
  + getB(): int
  + getC(): int
  + setA(int)
  + setB(int)
  + setC(int)
  + discriminante(): int
  + getRoots(): Pair<Complex, Complex>
  + equals(Object): boolean
  + hashCode(): int
  + toString(): String

  - frac(int, int): String
  - imagPart(int, int, int): String
}

'==============================
' CLASS Complex
'==============================
class Complex {
  - alpha: String
  - beta: String
  {static} - instanceCount: int
  {static} - DEFAULT_VALUE: String

  + Complex()
  + Complex(alpha: String, beta: String)
  + Complex(alpha: String)

  + getAlpha(): String
  + getBeta(): String
  + setAlpha(String)
  + setAlpha(int)
  + setBeta(String)
  + setBeta(int)

  {static} + createReal(String): Complex
  {static} + createReal(int): Complex
  {static} + createImaginary(String): Complex
  {static} + createImaginary(int): Complex

  {static} + getInstanceCount(): int
  + equals(Object): boolean
  + toString(): String
}

'==============================
' CLASS Pair<A,B>
'==============================
class Pair <A, B> {
  - first: A
  - second: B

  + Pair(first: A, second: B)
  + Pair(first: A)
  + Pair()
  
  + getFirst(): A
  + getSecond(): B
  + setFirst(A)
  + setSecond(B)
  + toString(): String
  + toString(detailed: boolean): String
  + equals(Object): boolean
}

'==============================
'==============================
' CLASS HistorialEcuaciones
'==============================
class HistorialEcuaciones {
  - historial: ArrayList<Registro>
  - maxSize: int
  {static} - MAX_HISTORIAL: int

  + HistorialEcuaciones()
  + HistorialEcuaciones(maxHistorial: int)
  + HistorialEcuaciones(eq: ecCuadraticas, raices: Pair, solucion: String)

  + agregarRegistro(ecCuadraticas, Pair<Complex,Complex>, String)
  + obtenerHistorial(): ArrayList<Registro>
  + obtenerRegistro(indice: int): Registro
  + obtenerTamaño(): int
  + buscar(valor: String): ArrayList<Registro>
  + limpiar()
  + eliminarRegistro(indice: int): boolean
  + obtenerHistorialFormateado(): String
}

'==============================
' INNER CLASS Registro (HistorialEcuaciones)
'==============================
class Registro {
  - ecuacion: ecCuadraticas
  - raices: Pair<Complex, Complex>
  - solucion: String
  - fecha: LocalDateTime

  + Registro(ecCuadraticas, Pair<Complex,Complex>, String)
  + getEcuacion(): ecCuadraticas
  + getRaices(): Pair<Complex, Complex>
  + getSolucion(): String
  + getFecha(): LocalDateTime
  + toString(): String
}

'==============================
' CLASS mathUtils
'==============================
class mathUtils {
  {static} + gcd(int, int): int
  {static} + getPrimeFactorization(int): Map<Integer, Integer>
}

'==============================
' GUI CLASSES
'==============================

'==============================
' CLASS frmSolver
'==============================
class frmSolver extends JFrame {
  - ecuacionActual: DifferentialEquation
  - raicesActuales: Pair<Complex, Complex>
  - raizCompleja1: Complex
  - raizCompleja2: Complex
  - historialEcuaciones: HistorialEcuaciones

  - txtA: JTextField
  - txtB: JTextField
  - txtC: JTextField

  - btnSolve: JButton
  - btnSteps: JButton
  - btnHistorial: JButton
  - btnLimpiarHistorial: JButton

  - panSolution: JPanel
  - lblSol: JLabel
  - lblSolTitle: JLabel

  {static} - logger: Logger

  + frmSolver()
  + getEcuacionActual(): DifferentialEquation
  + getRaicesActuales(): Pair<Complex, Complex>
  + getRaizCompleja1(): Complex
  + getRaizCompleja2(): Complex
  + getHistorialEcuaciones(): HistorialEcuaciones

  + btnSolveActionPerformed(ActionEvent)
  + btnStepsActionPerformed(ActionEvent)
  + btnHistorialActionPerformed(ActionEvent)
  + btnLimpiarHistorialActionPerformed(ActionEvent)

  - buildSteps(): StepData
  - secondOrderEc(ecCuadraticas): String
  - secondOrderEc(int,int,int): String
  - firstOrderEc(ecCuadraticas): String
  - firstOrderEc(int, int): String
  - formatCoefficient(int, boolean): String
  - formatRootLatex(Complex): String
  - buildY1Y2Latex(...): String[]
  - buildExpLatex(String): String
  - formatInnerExp(String): String
  - buildY1FirstOrderLatex(int, int): String
  - formatMultiplication(String): String
}

'==============================
' INNER CLASS StepData (frmSolver)
'==============================
class StepData {
  + step1: String
  + step2: String
  + step3: String
  + step4: String
}

'==============================
' CLASS frmSteps
'==============================
class frmSteps extends JFrame {
  - mainPanel: JPanel

  + frmSteps(p1: String, p2: String, p3: String, p4: String)
  - createStepPanel(latexText: String): JPanel
  - latexLabel(tex: String): JLabel
}

'==============================
' CLASS frmHistorial
'==============================
class frmHistorial extends JFrame {
  - modeloLista: DefaultListModel<String>
  - listRegistros: JList<String>
  - registros: ArrayList<Registro>
  - historial: HistorialEcuaciones

  + frmHistorial(hist: HistorialEcuaciones)
  - recargarLista()
}

'==============================
' RELATIONSHIPS
'==============================

' Jerarquía de herencia
DifferentialEquation <|-- LinearEquation
LinearEquation <|-- FirstOrderLinearEquation
LinearEquation <|-- SecondOrderLinearEquation

' Implementación de interfaces
FirstOrderLinearEquation ..|> Solvable
SecondOrderLinearEquation ..|> Solvable

' Excepciones
FirstOrderLinearEquation ..> InvalidEquationException : throws
SecondOrderLinearEquation ..> InvalidEquationException : throws

' Agregación en frmSolver
frmSolver o-- DifferentialEquation : agrega
frmSolver o-- Pair : agrega
frmSolver o-- Complex : agrega
frmSolver o-- HistorialEcuaciones : agrega

' SecondOrderLinearEquation usa ecCuadraticas
SecondOrderLinearEquation o-- ecCuadraticas : agrega

' Uso y dependencias
ecCuadraticas ..> Pair : usa/retorna
ecCuadraticas ..> Complex : usa
ecCuadraticas ..> mathUtils : usa

frmSolver ..> ecCuadraticas : usa
frmSolver ..> Pair : usa
frmSolver ..> Complex : usa
frmSolver ..> mathUtils : usa
frmSolver ..> frmSteps : crea
frmSolver ..> frmHistorial : crea
frmSolver ..> FirstOrderLinearEquation : crea
frmSolver ..> SecondOrderLinearEquation : crea
frmSolver ..> InvalidEquationException : maneja

' Composición (inner classes)
frmSolver *-- StepData : contiene
HistorialEcuaciones *-- Registro : contiene

' ArrayList en HistorialEcuaciones
HistorialEcuaciones o-- "0..*" Registro : almacena en ArrayList

' Registro agrega objetos
Registro o-- ecCuadraticas : agrega
Registro o-- Pair : agrega

' frmHistorial usa HistorialEcuaciones
frmHistorial ..> HistorialEcuaciones : usa
frmHistorial o-- "0..*" Registro : usa ArrayList

' Pair genérico puede contener Complex
Pair ..> Complex : puede contener

@enduml
